# dealroom

./: AUDIT.md  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
dealroom/: __init__.py  cli.py  connect.py  core.py  mcp_server.py
demos/01-basic/: SCENARIO.md
demos/01-basic/sample-dataroom/Commercial/: subscription-terms-of-service.txt
demos/01-basic/sample-dataroom/Corporate/: bylaws.txt  cap-table.csv  certificate-of-incorporation.txt
demos/01-basic/sample-dataroom/Financial/: financial-statements-2025.txt
demos/01-basic/sample-dataroom/HR/: employee-census.csv
demos/01-basic/sample-dataroom/IP/: contractor-invention-agreement.txt
demos/01-basic/sample-dataroom/Legal/: msa-bigco-customer.txt  vendor-agreement-datacenter.txt
demos/01-basic/sample-dataroom/Metrics/: arr-churn-cohorts.csv
docs/: ARCHITECTURE.md
examples/: help.txt  version.txt
tests/: test_connect.py  test_deep.py  test_hardening.py  test_smoke.py
