[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-dealroom"
version = "0.1.0"
description = "M&A/VC due-diligence assistant — dataroom checklist, item tracking, and local-document risk flagging"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["business", "due-diligence", "m-and-a", "venture-capital", "cognis-digital", "cognis-neural-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/dealroom"

[project.scripts]
dealroom = "dealroom.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dealroom"]
